added api generation, adapted controllers, added catalog functionality
